@@ -50,6 +50,8 @@
 <UL>
 <LI>New icons designed by Edward Daze.</LI>
 <LI>Added support for ANSI 16 color sequences.</LI>
+<LI>Added UI to specify scrollback buffer size.</LI>
+<LI>Added support for mid-button paste.</LI>
 <LI>Added support for alternate screen buffer mode.</LI>
 <LI>When display is erased, contents are stored in scrollback buffer.</LI>
 <LI>Users can now specify the size of scrollback buffer.</LI>
